--- a/style/create_gifo.scss
+++ b/style/create_gifo.scss
@@ -262,13 +262,14 @@ video{
 .uploadMessage{
     display: none;
     flex-direction: column;
-    width: 688px;
-    height: 390px;
+    width: 480px;
+    height: 320px;
     justify-content: center;
     align-items: center;
     background-color: #572EE5;
     opacity: 0.7;
-    margin-left: -900px;
+    margin-left: -796px;
+    margin-top: 2.8%;
     
 }
 .progress-icon{
@@ -278,14 +279,15 @@ video{
 
 .upload-message-done{
     display: none;
-    width: 688px;
-    height: 390px;
+    width: 480px;
+    height: 320px;
     //justify-content: center;
   //  flex-direction: column;
   //  align-items: center;
     background-color: #572EE5;
     opacity: 0.7;
-    margin-left: -900px;
+    margin-left: -796px;
+    margin-top: 2.8%;
 }
 
 .progress-icon{
