--- a/style/my-gifs.scss
+++ b/style/my-gifs.scss
@@ -43,3 +43,50 @@
     height: 150px;
     margin-left: 45%;//mejorar esto para responsive
 }
+
+.galery{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 80%; 
+    margin-left: 10%; 
+}
+
+.img-layer{
+    width: 260px;
+    height: 200px;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: -260px; //-19%;
+    opacity: 0;
+    transition: all .3s ease-in-out;  
+}
+.img-layer:hover {
+    background-color: $purple-color;
+    opacity: 0.7;
+    width: 260px;
+    height: 200px;
+}
+
+#icons-layer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+.icons-layer {
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    margin-right: 4%;
+    margin-top: 5%;
+    border:none;
+    border-radius: 6px;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
