--- a/style/_main.scss
+++ b/style/_main.scss
@@ -16,9 +16,9 @@
     text-align: center;
     line-height: 50px;
     margin-top: 50px;
-    &.dark {
+ /*   &.dark {
         color: red;
-    }
+    }*/
     
 }
 .change__color{
