--- a/style/favorites.scss
+++ b/style/favorites.scss
@@ -14,7 +14,7 @@
 @import "_main.scss";
 
 //Night mode
-@import "_nightmode.scss";
+//@import "_nightmode.scss";
 
 //Trending - Slider
 @import "_trending.scss";
