night mode ajustments

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -1,3 +1,10 @@
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+/**{
+    box-sizing: inherit;
+}*/
 
 body{
     display: inline;
@@ -5,9 +12,8 @@ body{
     min-width: 375px;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    //box-sizing: border-box;
     background-color: $background-color;
-    transition: .3s ease all;
 
 }
 h1{
