--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -2,10 +2,9 @@
 hr{
   display: flex;
   align-items: center;
-  //width: 1440px;
   height: 5px;
   background-color: $purple-color;
-  margin-top: 0;
+  margin: 0;
 
 }
 
