--- a/style/nightmode.css
+++ b/style/nightmode.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@400;700;900&display=swap");
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
 body {
   background-color: #37383C;
   display: inline;
@@ -6,8 +11,6 @@ body {
   min-width: 375px;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  transition: .3s ease all;
 }
 
 h1 {
@@ -53,7 +56,7 @@ hr {
   align-items: center;
   height: 5px;
   background-color: black;
-  margin-top: 0;
+  margin: 0;
   border: none;
 }
 
