--- a/style/nightmode.scss
+++ b/style/nightmode.scss
@@ -4,6 +4,11 @@
 @import "_variables.scss";
 
 //// GENERAL
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+
 body{
     background-color: $night-background-color;
     display: inline;
@@ -11,8 +16,7 @@ body{
     min-width: 375px;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    transition: .3s ease all;
+    //box-sizing: border-box;
 }
 
 h1{
@@ -61,10 +65,9 @@ h5{
 hr{
     display: flex;
     align-items: center;
-    //width: 1440px;
     height: 5px;
     background-color: black;
-    margin-top: 0;
+    margin: 0;
     border:none;
   }
   
