--- a/style/my-gifs.css
+++ b/style/my-gifs.css
@@ -377,31 +377,31 @@ label {
   top: 0;
   width: 100%;
   /* Full width */
-  height: 100%;
+  height: 80%;
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: red;
   /* Black w/ opacity */
+}
+
+.mySlidesModal {
+  display: flex;
+  justify-content: center;
 }
 
 /* Modal Content/Box */
 .modal-container {
   background-color: #fefefe;
-  margin: 15% auto;
-  /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  /* Could be more or less, depending on screen size */
+  border: none;
 }
 
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
+  color: greenyellow;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 5%;
+  font-size: 50px;
   font-weight: bold;
 }
 
@@ -410,6 +410,73 @@ label {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.prev2, .next2 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  width: 8px;
+  color: #572EE5;
+  border-style: solid;
+  border-width: 2px;
+  font-size: 14px;
+  transition: 0.6s ease;
+  user-select: none;
+}
+
+.next2 {
+  right: 0;
+}
+
+.prev2:hover, .next2:hover {
+  background-color: #572EE5;
+  color: white;
+  border-color: #572EE5;
+}
+
+.arrowsModal {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 22%;
+  margin-right: 22%;
+}
+
+#titleModal {
+  font-size: 15px;
+  color: black;
+  font-weight: 400;
+}
+
+#userModal {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.icons-layer-modal {
+  cursor: pointer;
+  flex-direction: row;
+  width: 32px;
+  height: 32px;
+  margin-top: 100%;
+  border: 2px #572EE5;
+  border-radius: 6px;
+  background: none;
+  color: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
+.modal-icon-layer {
+  display: flex;
+  padding-top: 23%;
+  justify-content: space-between;
+  margin-left: -5%;
 }
 
 .trending {
