suggestions first approach

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -95,7 +95,7 @@
 
 
 .gral-button{
-    display: none; //should be block when the search appear.
+    display: block; //should be block when the search appear.
     position: absolute;
     margin-left: 25%;
     margin-top: 2%;
