--- a/style/_trending.scss
+++ b/style/_trending.scss
@@ -30,7 +30,7 @@
     color: $purple-color;
     line-height: 30px;
 }
-#trending-font{
+.trending-font{
     font-size: 18px;
     line-height: 25px;
     margin-top: 5%;
