--- a/style/nightmode.css
+++ b/style/nightmode.css
@@ -608,7 +608,7 @@ Modal Content/Box
 }
 
 .title-mygifs {
-  color: #572EE5;
+  color: #FFFFFFFF;
   font-size: 15px;
   text-align: center;
   margin-top: 2px;
@@ -649,18 +649,6 @@ Modal Content/Box
   position: relative;
 }
 
-.camera-container {
-  margin-top: 6%;
-  display: flex;
-  flex-direction: row;
-}
-
-.camera-container-dark {
-  margin-top: 6%;
-  display: flex;
-  flex-direction: row;
-}
-
 .video-preview {
   width: 480px;
   height: 320px;
@@ -673,29 +661,20 @@ video {
   margin-top: 5%;
 }
 
-.tapes-cam-container {
-  display: flex;
-  flex-direction: column;
-  width: 123px;
-  height: 162px;
-}
-
-#tape-animation1 {
-  width: 30%;
-  margin-top: 20%;
-  opacity: 100%;
-}
-
-#tape-animation2 {
-  width: 50%;
-  opacity: 100%;
-}
-
 .light {
-  margin-top: 15%;
+  margin-top: 10%;
   opacity: 50%;
   width: 91px;
-  height: 151px;
+  height: 165px;
+}
+
+.camera_img {
+  width: 130px;
+  height: 170px;
+}
+
+.light-cam-container {
+  margin-top: 40%;
 }
 
 #num-bar-container {
