--- a/style/nightmode.scss
+++ b/style/nightmode.scss
@@ -643,7 +643,7 @@ Modal Content/Box
 ////MY GIFS
 
 .title-mygifs {
-    color: $purple-color;
+    color: $background-color;
     font-size: 15px;
     text-align: center;
     margin-top: 2px;
@@ -685,16 +685,6 @@ Modal Content/Box
     position: relative;
     
 }
-.camera-container{
-    margin-top: 6%;
-    display: flex;
-    flex-direction: row;
-}
-.camera-container-dark{
-    margin-top: 6%;
-    display: flex;
-    flex-direction: row;
-}
 .video-preview{
     width: 480px;
     height: 320px;
@@ -706,29 +696,19 @@ video{
     margin-top: 5%;
 }
 
-.tapes-cam-container{
-    display: flex;
-    flex-direction: column;
-    //margin-top: 30%;
-    width: 123px;
-    height: 162px;
-    
-}
 
-#tape-animation1 {
-    width: 30%;
-    margin-top:20%;
-    opacity: 100%;
-}
-#tape-animation2{
-    width: 50%;
-    opacity: 100%;
-}
 .light{
-    margin-top: 15%;
+    margin-top: 10%;
     opacity: 50%;
     width: 91px;
-    height: 151px;
+    height: 165px;
+}
+.camera_img{
+    width: 130px;
+    height: 170px;
+}
+.light-cam-container{
+    margin-top: 40%;
 }
 #num-bar-container{
     display: flex;
