--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ h5 {
 header {
   width: 100%;
   position: fixed;
-  z-index: 10;
+  z-index: 1;
 }
 
 #logo {
@@ -78,9 +78,9 @@ header {
 .nav {
   display: flex;
   justify-content: space-around;
+  background-color: #FFFFFFFF;
   border-bottom: none;
   text-align: center;
-  background: #FFFFFFFF;
 }
 
 .list-nav {
@@ -128,14 +128,19 @@ label {
   .blue-line {
     width: 110%;
   }
+  .wider {
+    height: 500px;
+  }
   header {
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 1;
   }
   .nav {
     display: flex;
     justify-content: space-between;
+    background-color: #FFFFFFFF;
+    opacity: 90%;
   }
   .nav #logo {
     margin-left: 30%;
@@ -157,7 +162,6 @@ label {
     color: #FFFFFFFF;
     padding-left: 25%;
     width: 100%;
-    height: 200%;
   }
   .nav .menu__list {
     margin-left: -90%;
@@ -218,10 +222,8 @@ label {
   }
   .nav .menu {
     width: 100%;
-    opacity: 90%;
     display: none;
     margin-top: 60px;
-    height: 100%;
   }
 }
 
@@ -229,6 +231,7 @@ label {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 8%;
 }
 
 #break__desktop {
